Implemented Database, Template Controller.
Added jQuery, new templates.

Added data fetch method to Request

--- a/template/form/login.mustache
+++ b/template/form/login.mustache
@@ -1,6 +1,6 @@
 <h1>Database Login</h1>
 
-<form action="{{submit-action}}" method="post" class="form-vertical" id="dblogin">
+<form action="{{form_action}}" method="post" class="form-vertical" id="dblogin">
 	<fieldset>
 		<legend>Database Info</legend>
 
@@ -11,22 +11,16 @@
 		<input type="text" name="user" id="user" required>
 
 		<label for="password">DB Password</label>
-		<input type="password" name="password" id="password" required>
+		<input type="password" name="password" id="password" >
 
 		<label for="database">Database</label>
-		<select name="database" id="database" required>
+		<select name="database" id="database" >
 			<option value="">Not loaded</option>
-			<option value="foo">Foo</option>
-			<option value="bar">Bar</option>
-			<option value="baz">Baz</option>
 		</select>
 
 		<label for="table">Table</label>
-		<select name="table" id="table" required>
+		<select name="table" id="table" >
 			<option value="">Not loaded</option>
-			<option value="foobar">FooBar</option>
-			<option value="foobaz">FooBaz</option>
-			<option value="barbaz">BarBaz</option>
 		</select>
 
 		<button>Generate Form</button>
