--- a/template/template.mustache
+++ b/template/template.mustache
@@ -23,7 +23,7 @@
 	{{{content}}}
 
 	{{#scripts}}
-	<script type="text/javascript" src="{{}}"></script>
+	<script type="text/javascript" src="{{src}}"></script>
 	{{/scripts}}
 </body>
 </html>
