Layout changes, added basic styling

--- a/template/form/output.mustache
+++ b/template/form/output.mustache
@@ -1,3 +1,8 @@
+<aside class="actions">
+<a href="Database/login"><button>Go Back</button></a>
+<button id="download">Download As Website</button>
+</aside>
+
 <h2>Code:</h2>
 
 <form action="Database/download" method="post" id="codeform">
@@ -9,8 +14,3 @@
 <div id="rendered">
 	{{{code}}}
 </div>
-
-
-<p>
-	<button id="download">Download As Website</button>
-</p>
