--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,6 +1,5 @@
 .form-vertical {
 	background: #929487;
-	font-family: sans-serif;
 	font-size: 86%;
 	color: #F4F5ED;
 }
@@ -44,10 +43,43 @@
 	width: 200px;
 	height: 31px;
 	border: 0;
-	background: #89CEDE;
+	background: #de5a51;
 	text-align: center;
 	line-height: 31px;
 	color: #F4F5ED;
 	font-size: 11px;
 	font-weight: bold;
+}
+
+@media only screen 
+and (max-width : 480px) {
+
+	body {
+		padding: 0px !important;
+	}
+
+	form.form-vertical {
+		box-sizing: border-box;
+		width: 100% !important;
+	}
+
+	form.form-vertical label {
+		float: none;
+		display: block;
+		width: 100%;
+		text-align: left;
+		height: 2em;
+	}
+
+	form.form-vertical input,
+	form.form-vertical select,
+	form.form-vertical button {
+		box-sizing: border-box;
+		float: none;
+		display: block;
+		width: 100%;
+		margin: 0;
+		margin-bottom: 1em;
+	}
+
 }
