--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,81 @@
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,700,300);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600,700);
+
+body {
+	box-sizing: border-box;
+	padding: 10px 50px;
+	background: #F2F1ED;
+	color: #999;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	font-family: 'Oswald', sans-serif;
+	font-weight: 700;
+	color: #262626;
+}
+
+legend {
+	font-family: 'Oswald', sans-serif;
+	font-weight: 400;
+	color: #262626;
+}
+
 #dblogin,
 #output {
-	margin: 0 auto;
 	padding: 14px;
 	width: 400px;
+	background: #999;
 }
 
 #output {
 	margin: 0;
+}
+
+#code {
+	width: 100%;
+}
+
+.actions {
+	background: #262626;
+	position: fixed;
+	top: 10px;
+	right: 50px;
+	padding: 1em;
+}
+
+.actions button {
+	background: #de5a51;
+	color: #F2F1ED;
+	border: 0;
+	height: 30px;
+	line-height: 30px;
+	padding: 0 3em;
+	font-size: 11px;
+	font-weight: bold;
+	margin-left: 1em;
+}
+
+.actions button:hover {
+	color: #262626;
+}
+
+.actions button:first-child {
+	margin: 0;
+}
+
+.red {
+	color: #de5a51;
+}
+
+.install {
+	width: 400px;
+}
+
+.install input,
+.install button {
+	box-sizing: border-box;
+	display: block;
+	width: 100%;
 }
