--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,8 +17,8 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 legend {
-	font-family: 'Oswald', sans-serif;
-	font-weight: 400;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 600;
 	color: #262626;
 }
 
