Imporved usability of login form. Disabled Dropdowns while no content is loaded

--- a/template/form/login.mustache
+++ b/template/form/login.mustache
@@ -12,12 +12,12 @@
 	<input type="password" name="password" id="password">
 
 	<label for="database">Database</label>
-	<select name="database" id="database" required>
+	<select name="database" id="database" required disabled>
 		<option value="">Not loaded</option>
 	</select>
 
 	<label for="table">Table</label>
-	<select name="table" id="table" required>
+	<select name="table" id="table" required disabled>
 		<option value="">Not loaded</option>
 	</select>
 
